syntax = "proto3";

package customer;
option go_package = "github.com/anhhuy1010/DATN-cms-customer/grpc/proto/updatecustomer";

import "google/api/annotations.proto";

service Customer {
  rpc UpdateDuration (UpdateDurationRequest) returns (UpdateDurationResponse) {
    option (google.api.http) = {
      get: "/v1/customers/{uuid}"
    };
  }
}

message UpdateDurationRequest {
  string uuid = 1;
}

message UpdateDurationResponse {
  string message = 1;
}